--- a/www/wiki.css
+++ b/www/wiki.css
@@ -81,10 +81,7 @@ https://brotato.wiki.spellsandguns.com/MediaWiki:Common.js
 	opacity: 1;
 	padding: 10px;
 	transition: 0.1s;
-	width: 300px;
 	color: #fff;
-	min-width: 200px;
-	max-width: 500px;
 	font-size: 15px;
 }
 
